--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   * {
     margin: 0;
     padding: 0;
+
   }
 
   body {
@@ -26,14 +27,18 @@
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding: 5px;
+    
   }
+  
 
   #menus {
     grid-area: menus;
     background: rgb(230, 196, 154);
     border-radius: 20px;
     padding: 10px;
-    max-width: 30rem;
+    max-width: 27rem;
+    overflow-y: scroll;
+    
     
   }
 
@@ -49,7 +54,7 @@
   }
 
   #search {
-    width: 200px;
+    width: 300px;
     height: 20px;
     margin: 0 10%;
     border-radius: 20px;
@@ -57,9 +62,6 @@
     border: none;
   }
 
-  #menuicon {
-    padding: 5px;
-  }
 
   #mainheading {
     text-align: center;
@@ -93,4 +95,16 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+  }
+  #bigtext{
+    height: 10%;
+    width: 100%;
+    background-color: rgb(127, 127, 195);
+    text-align: center;
+    padding-top: 50px;
+    font-size: large;
+    border-radius: 20px;
+    
+
+
   }
